[gd_scene load_steps=4 format=3 uid="uid://bq8ej5qqj6hj1"]

[ext_resource type="Script" path="res://game.gd" id="1_vuj6t"]
[ext_resource type="PackedScene" uid="uid://dc1bh0iioueft" path="res://scenes/player.tscn" id="2_nneto"]
[ext_resource type="PackedScene" uid="uid://cpy1cff5kk3os" path="res://scenes/level.tscn" id="3_r35gd"]

[node name="Game" type="Node" node_paths=PackedStringArray("main_menu", "start_button", "exit_game_button", "pause_menu", "resume_button", "quit_button", "game_interface", "time_label", "score_label")]
script = ExtResource("1_vuj6t")
player_scene = ExtResource("2_nneto")
level_scene = ExtResource("3_r35gd")
main_menu = NodePath("UI/MarginContainer/MainMenu")
start_button = NodePath("UI/MarginContainer/MainMenu/VBoxContainer/HBoxContainer/Start")
exit_game_button = NodePath("UI/MarginContainer/MainMenu/VBoxContainer/Quit")
pause_menu = NodePath("UI/MarginContainer/PauseMenu")
resume_button = NodePath("UI/MarginContainer/PauseMenu/VBoxContainer/Resume")
quit_button = NodePath("UI/MarginContainer/PauseMenu/VBoxContainer/Exit")
game_interface = NodePath("UI/MarginContainer/GameInterface/HBoxContainer")
time_label = NodePath("UI/MarginContainer/GameInterface/HBoxContainer/TimeLabel")
score_label = NodePath("UI/MarginContainer/GameInterface/HBoxContainer/ScoreLabel")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="CenterContainer" parent="UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/MainMenu"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2
text = "GDG"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/MainMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MarginContainer/MainMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Minigame"
horizontal_alignment = 1

[node name="Start" type="Button" parent="UI/MarginContainer/MainMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="Quit" type="Button" parent="UI/MarginContainer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="PauseMenu" type="CenterContainer" parent="UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/PauseMenu"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/MarginContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="UI/MarginContainer/PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="Exit" type="Button" parent="UI/MarginContainer/PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[node name="GameInterface" type="VBoxContainer" parent="UI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/GameInterface"]
layout_mode = 2
mouse_filter = 2

[node name="TimeLabel" type="Label" parent="UI/MarginContainer/GameInterface/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 0"

[node name="Control" type="Control" parent="UI/MarginContainer/GameInterface/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="UI/MarginContainer/GameInterface/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0"

[node name="Control" type="Control" parent="UI/MarginContainer/GameInterface"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[connection signal="button_down" from="UI/MarginContainer/MainMenu/VBoxContainer/HBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="UI/MarginContainer/MainMenu/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="UI/MarginContainer/PauseMenu/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="UI/MarginContainer/PauseMenu/VBoxContainer/Exit" to="." method="_on_exit_button_down"]
